# yunwen

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  deploy.bat  deploy.sh  docker-compose.yml  nodemon.json  package-lock.json  package.json  tsconfig.json  uv.toml  vite.config.ts  vitest.config.ts
api/: app.ts  docs.ts  server.ts
api/config/: database.ts  init-db.ts
api/lib/: logger.ts  otel.ts
api/middleware/: auth.ts
api/routes/: auth-real.ts  auth.ts  iam.ts  maintenance.ts  metrics.ts  monitoring.ts  notifications.ts  settings.ts  systems.ts  task-groups.ts  tasks.ts  users.ts
api/scripts/: add-systems.ts  create-rbac.ts  drop-logs-table.ts  init-database.ts  reset-admin-password.ts  test-cron.ts  test-db.ts
api/services/: authService.ts  scheduler.ts  taskService.ts
backups/: backup-20251126-230633.json  backup-20251127-015959.json
docker/: deploy.bat  deploy.sh  nginx.conf
docs/: resilience-roadmap.md
scheduler-backend/: .coveragerc  .env.example  Dockerfile  README.md  main.py  pyproject.toml
scheduler-backend/app/api/v1/: monitoring.py  router.py
scheduler-backend/app/api/v1/endpoints/: auth.py  tasks.py
scheduler-backend/app/core/: config.py  database.py  logging.py  scheduler.py  security.py  task_executor.py
scheduler-backend/app/models/: __init__.py
scheduler-backend/app/schemas/: auth.py
scheduler-backend/app/services/: execution_service.py  monitoring_service.py  task_service.py
scheduler-backend/tests/: test_health.py
src/: App.css  App.tsx
src/__tests__/: utils.spec.ts
src/components/: Layout.tsx
src/lib/: api.ts  utils.ts
src/pages/: Alerts.tsx  Dashboard.tsx  Login.tsx  Monitoring.tsx  Profile.tsx  Resources.tsx  Roles.tsx  SecurityManagement.tsx  Settings.tsx  Systems.tsx  (+5 more)
(+6 files in other folders)
