# 智能定时任务控制平台 - Python后端
# 使用UV包管理器

[project]
name = "intelligent-scheduler"
version = "0.1.0"
description = "企业级智能定时任务调度平台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "apscheduler==3.10.4",
    "loguru==0.7.2",
    "python-json-logger==2.0.7",
    "bcrypt==4.1.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "httpx==0.25.2",
    "croniter==2.0.1",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "asyncpg==0.29.0",
    "aioredis==2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true